fixed overflow in main_wrapper

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,7 @@ main {
     align-items: center;
     width: 100%;
     margin-bottom: 30px;
+    overflow: clip;
 }
 
 #main_wrapper__index_toptext {
